- Modulo NJLive - contest/problems(25%)

--- a/NJLive/web/commons/header.xhtml
+++ b/NJLive/web/commons/header.xhtml
@@ -8,6 +8,7 @@
         <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
+        <link rel="stylesheet" href="/css/customized-primefaces.css"/>
         <link rel="stylesheet" href="/css/style-nj.css"/>
         <link rel="stylesheet" href="/tools/frameworks/bootstrap/css/bootstrap.min.css"/>
         <script type="text/javascript" src="/js/jquery-2.1.4.js"></script> 
