--- a/NJWeb/web/modules/practice/contest/search.xhtml
+++ b/NJWeb/web/modules/practice/contest/search.xhtml
@@ -10,7 +10,8 @@
 
     <ui:define name="metadata">
         <f:metadata>
-            <f:viewParam name="idChallenge" value="#{challengeViewBean.challengeMessageView.idChallenge}"/>
+            <f:viewParam name="idChallenge" 
+                         value="#{challengeViewBean.challengeMessageView.idChallenge}"/>
         </f:metadata>
     </ui:define>
 
