--- a/NJLive/web/challenge/content.xhtml
+++ b/NJLive/web/challenge/content.xhtml
@@ -16,7 +16,7 @@
                         <p:dataTable id="table-problems-client"
                                      widgetVar="widgetProblemsClient"
                                      tableStyleClass="table table-striped table-hover"
-                                     value="#{workspaceContentBean.listProblems}"
+                                     value="#{roomContentBean.listProblems}"
                                      var="p"
                                      styleClass="center-block"
                                      rowKey="#{p.idProblem}"
