--- a/NJLive/web/commons/navigation.xhtml
+++ b/NJLive/web/commons/navigation.xhtml
@@ -28,6 +28,9 @@
                             <h:commandLink styleClass="btn btn-default" style="width: 160px;"
                                            value="Score"
                                            action="#{navegationRoomBean.actionRedirectScoreBoard}" />
+                            <h:commandLink styleClass="btn btn-default" style="width: 160px;"
+                                           value="Submits"
+                                           action="#{navegationRoomBean.actionRedirectSubmitsBoard}" />
                         </div>
                         <ul class="nav navbar-nav navbar-right">
                             <li>
