--- a/NJWeb/web/modules/content/problem/create.xhtml
+++ b/NJWeb/web/modules/content/problem/create.xhtml
@@ -31,7 +31,8 @@
                         </div>
                         <label for="categoryProblem" class="col-md-1 control-label">Categoria</label>
                         <div class="col-md-3">
-                            <p:selectOneMenu id="categoryProblem" styleClass="selected-list form-control" style="width: 100%;" converter="categoryProblemConvertJSF"
+                            <p:selectOneMenu id="categoryProblem" styleClass="selected-list form-control"
+                                             style="width: 100%;" converter="categoryProblemConvertJSF"
                                              value="#{problemsBean.categoryProblemView}"  required="true" >
                                 <f:selectItems value="#{categoryBean.categoryProblemItems}" />                                               
                             </p:selectOneMenu>
@@ -57,7 +58,7 @@
                         <label for="timeProblem" class="col-md-1 control-label">Tiempo Juzgamiento</label>
                         <div class="col-md-3">
                             <p:spinner id="timeProblem" stepFactor="1" min="1" max="6"  placeholder="1"
-                                       value="#{problemsBean.problemView.timeLimitSeg}"
+                                       value="#{problemsBean.problemView.timeLimit}"
                                        required="true" />
                         </div>
                     </div>
